hack to fix issues on mobile browsers

--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,10 @@
     --else-font: 'Roboto Mono', monospace;
 }
 
+
 .container, html, body {
-    height: 100%;
     margin: 0;
+    background-color: black;
 }
 
 h3, h5, div {
@@ -28,6 +29,7 @@ h1 {
     flex: 0.7;
     display: flex;
     flex-direction: column;
+    
 }
 
 .topseperator {
@@ -35,6 +37,7 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+
 }
 
 .transparentbox {
@@ -186,6 +189,7 @@ margin-left: 20px;
 }
 
 
+
 @media only screen and (min-width: 700px) {
 
 
@@ -210,6 +214,13 @@ margin-left: 20px;
     align-items: center;
     color: white;
 }
+
+.container, html, body {
+    height: 100%;
+    margin: 0;
+}
+
+
     
 }
 
